[package]
name = "ed2k"
version = "0.1.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Pure Rust implementation of the ed2k hashing algorithm"
keywords = ["crypto", "ed2k", "hash", "digest"]

[dependencies]
digest = "0.10"
md4 = "0.10"

[dev-dependencies]
anyhow = "1"
crossbeam = "0.8"
num_cpus = "1.0"
structopt = "0.3"
